; ModuleID = '/home/carl/AnghaBench/radare2/shlr/ptrace-wrap/src/extr_ptrace_wrap.c_th_run.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/ptrace-wrap/src/extr_ptrace_wrap.c_th_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_7__, i32 }
%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_8__*)* @th_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @th_run(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  br label %3

3:                                                ; preds = %1, %21
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  %6 = call i32 @sem_wait(i32* %5)
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %21 [
    i32 128, label %11
    i32 129, label %12
    i32 131, label %15
    i32 130, label %18
  ]

11:                                               ; preds = %3
  br label %25

12:                                               ; preds = %3
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %14 = call i32 @wrap_ptrace(%struct.TYPE_8__* %13)
  br label %21

15:                                               ; preds = %3
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %17 = call i32 @wrap_fork(%struct.TYPE_8__* %16)
  br label %21

18:                                               ; preds = %3
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %20 = call i32 @wrap_func(%struct.TYPE_8__* %19)
  br label %21

21:                                               ; preds = %3, %18, %15, %12
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = call i32 @sem_post(i32* %23)
  br label %3

25:                                               ; preds = %11
  ret i8* null
}

declare dso_local i32 @sem_wait(i32*) #1

declare dso_local i32 @wrap_ptrace(%struct.TYPE_8__*) #1

declare dso_local i32 @wrap_fork(%struct.TYPE_8__*) #1

declare dso_local i32 @wrap_func(%struct.TYPE_8__*) #1

declare dso_local i32 @sem_post(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
